--- a/WebContent/css/yellow.css
+++ b/WebContent/css/yellow.css
@@ -183,7 +183,7 @@ table.verticalTable th {
 
 table.inputTable {
 	margin: 30px;
-	width: calc(100% - 60px);
+	width: 90%;
 	border-collapse: separate;
 	border-spacing: 0;
 
@@ -244,7 +244,6 @@ table.inputTable td input {
 table.inputTable td input[type="text"],
 table.inputTable td input[type="password"] {
 	width: 100%;
-	height: 40px;
 	box-sizing:border-box;
 	padding: 0.3em;
 	transition: 0.3s;
@@ -262,7 +261,7 @@ table.inputTable td input[type="password"]:focus {
 }
 
 table.inputTable, th, td {
-	border-collapse: collapse;
+	border-collapse: collaspse;
 	border: 2px solid #ccc;
 }
 
@@ -433,8 +432,8 @@ table.inputTable-mini, th, td {
 
 .relatedProductBox {
 	margin: 0 auto;
-	max-width: 200px;
-	width: 100%;
+	width: 250px;
+	height:250px;
 }
 
 /*
